--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "generate-photos": "node scripts/generate-photos.js"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^2.0.0",
+    "@sveltejs/adapter-static": "^2.0.0",
     "@sveltejs/kit": "^1.5.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/node": "^18.15.11",
